# clmedview

./: .gitignore  Makefile.am  README.md  configure.ac  dependencies.sh
doc/: Doxyfile  clmedview.texi  custom.css
doc/images/: component-diagram.dia  grel-mechanism.dia  grel-sequence-diagram.dia
grel-scripts/: init.scm
icons/sources/: empty.xcf  fill.xcf  pencil.xcf  polygon.xcf  sobel.xcf
include/: lib-common-algebra.h  lib-common-history.h  lib-common-unused.h  lib-common.h  lib-configuration.h  lib-grel-interpreter.h  lib-grel-shell.h  lib-io-dicom.h  lib-io-nifti.h  lib-memory-io.h  lib-memory-patient.h  lib-memory-quaternion.h  lib-memory-serie.h  lib-memory-slice.h  lib-memory-study.h  lib-memory-tree.h  lib-memory.h  lib-pixeldata-plugin.h  lib-pixeldata.h  lib-viewer.h
lib/lib-common/: lib-common-algebra.c  lib-common-debug.c  lib-common-history.c  lib-common-list.c  lib-common-tree.c
lib/lib-configuration/: lib-configuration.c
lib/lib-grel/: lib-grel-interpreter.c  lib-grel-shell.c
lib/lib-io-dicom/: lib-io-dicom.c  znzlib.c  zz.c  zzwrite.c
lib/lib-io-dicom/include/: zz.h  zzio.h  zztags.h  zzwrite.h
lib/lib-io-nifti/: lib-io-nifti.c  nifti1_io.c
lib/lib-io-nifti/include/: nifti1.h
lib/lib-memory/: lib-io-niftii.c  lib-memory-io.c  lib-memory-patient.c  lib-memory-quaternion.c  lib-memory-serie.c  lib-memory-slice.c  lib-memory-study.c  lib-memory-tree.c
lib/lib-memory/include/: lib-io-niftii.h  nifti1.h
lib/lib-pixeldata/: lib-pixeldata-plugin.c  lib-pixeldata.c
lib/lib-viewer/: lib-viewer.c
libcommon/: Makefile.am
libcommon/include/: lib-common-algebra.h  lib-common-debug.h  lib-common-list.h  lib-common-tree.h  lib-common.h  libcommon-algebra.h  libcommon-debug.h  libcommon-history.h  libcommon-list.h  libcommon-tree.h  libcommon.h
libcommon/src/: libcommon-algebra.c  libcommon-debug.c  libcommon-history.c  libcommon-list.c  libcommon-tree.c
libconfiguration/: Makefile.am
libconfiguration/include/: libconfiguration.h
libconfiguration/src/: libconfiguration.c
libhistogram/: Makefile.am
libhistogram/include/: libhistogram.h
libhistogram/src/: libhistogram.c
libio/: Makefile.am
libio/include/: libio-dicom.h  libio-nifti.h
libio/src/: libio-dicom.c  libio-nifti.c
libio/src/dicom/: znzlib.c  zzio.c
libio/src/dicom/include/: zz_priv.h
libio/src/nifti/: nifti1_io.c
libmemory/: Makefile.am
libmemory/include/: libmemory-io.h  libmemory-patient.h  libmemory-serie.h  libmemory-slice.h  libmemory-study.h  libmemory-tree.h  libmemory.h
libmemory/src/: libmemory-io.c  libmemory-patient.c  libmemory-serie.c  libmemory-slice.c  libmemory-study.c  libmemory-tree.c
libpixeldata/: Makefile.am
libpixeldata/include/: libpixeldata-plugin.h  libpixeldata.h
libpixeldata/src/: libpixeldata-plugin.c  libpixeldata.c
libviewer/: Makefile.am
libviewer/include/: libviewer.h
libviewer/src/: libviewer.c
luts/: 3-3-2-rgb.lut  blue.lut  cyan.lut  default-mask.lut  fire.lut  green.lut  grey.lut  ice.lut  jet.lut  magenta.lut  red-green.lut  red.lut  spectrum.lut  yellow.lut
plugin/: Makefile.am  Makefile.in  plugin-interface.c  plugin-interface.h
plugin/include/: plugin-interface-brush.h  plugin-interface-line.h  plugin-interface.h
plugin/src/: empty.c  fill.c  pen.c  plugin-interface.c  polygon.c  sobel.c
plugin/src/brushes/: Makefile.am  Makefile.in  libempty.c  libfill.c  libpen.c  libsobel.c  plugin-brush-interface.h
plugin/src/line-tools/: Makefile.am  Makefile.in  libpolygon.c  plugin-line-interface.h
plugin/src/selection-tools/: Makefile.am  Makefile.in  librectangle.c  plugin-select-interface.h
scripts/: cref-graph.sh
source/: main.c
source/gui/: mainwindow.c  mainwindow.h
