AUTOMAKE_OPTIONS 	= subdir-objects

AM_CFLAGS               = -I../../../include -I../../../lib/lib-common/include/ \
			  -I../../../lib/lib-common/ -Isrc/brushes/ -I../../

lib_LTLIBRARIES        = libempty.la libfill.la libpen.la libsobel.la

libempty_la_LDFLAGS     = -no-undefined -avoid-version
libfill_la_LDFLAGS      = -no-undefined -avoid-version
libpen_la_LDFLAGS       = -no-undefined -avoid-version
libsobel_la_LDFLAGS     = -no-undefined -avoid-version
