AUTOMAKE_OPTIONS 	= subdir-objects

AM_CFLAGS               = -I../../../include -Isrc/brushes/ -I../../ \
			  -I../../../libcommon/ -I../../../libcommon/include/ -I../../../libpixeldata/include/ -I../../../libmemory/include/

lib_LTLIBRARIES         = libempty.la libfill.la libpen.la libsobel.la

libempty_la_LDFLAGS     = -no-undefined -avoid-version
libfill_la_LDFLAGS      = -no-undefined -avoid-version
libpen_la_LDFLAGS       = -no-undefined -avoid-version
libsobel_la_LDFLAGS     = -no-undefined -avoid-version
