AUTOMAKE_OPTIONS 	= subdir-objects

AM_CFLAGS               = -I../../../include -Isrc/brushes/ -I../../ \
			  -I../../../libcommon/ -I../../../libcommon/include/ -I../../../libpixeldata/include/ -I../../../libmemory/include/

lib_LTLIBRARIES        = libpolygon.la

libpolygon_la_LDFLAGS     = -no-undefined -avoid-version
