AUTOMAKE_OPTIONS 	= subdir-objects

AM_CFLAGS               = -I../../../include -Isrc/brushes/ -I../../ \
			  -I../../../libcommon/include/ -I../../../libpixeldata/include/ -I../../../libmemory/include/

lib_LTLIBRARIES        = librectangle.la

librectangle_la_LDFLAGS     = -no-undefined -avoid-version
